# mcp-trust-framework

./: .gitignore  CONTRIBUTING.md  README.md
examples/: sample-did-document.json  sample-mcpserver-credential.json  sample-registry-entry.json  verifying-mcp-server-node.md  verifying-mcp-server-python.md
governance/: contributors.md  roadmap.md  versioning.md
registry-reference-implementation/: Dockerfile  README.md  docker-compose.yml  requirements.txt
registry-reference-implementation/src/: __init__.py  config.py  main.py  models.py  storage.py
sdks/node/: README.md  package.json  tsconfig.json
sdks/node/src/: client.ts  index.ts  types.ts  verification.ts
sdks/python/: README.md  pyproject.toml
sdks/python/mcpf_client/: __init__.py  client.py  models.py  verification.py
specs/: MCPF-1.0.md  credential-schema.json  did-profile.md  registry-api.md  security-considerations.md
